<resources>
    <string name="app_name">PopCorn</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="now_playing">Now Playing</string>
    <string name="today">Today\'s Show</string>

    <string name="season">seasons -</string>
    <string name="episodes">episodes</string>

    <string name="season_number">Season</string>
    <string name="colse">Close</string>

    <string name="in_production">In production</string>
    <string name="finished">Ended</string>

    <string name="title_example">The Avengers</string>
    <string name="date_example">2017</string>
    <string name="popularity">Popularity:</string>
    <string name="popularity_example">48.2</string>
    <string name="vote_average">Average rating:</string>
    <string name="vote_average_example">5.91</string>
    <string name="genres">Genres:</string>
    <string name="genre_1_example">Action</string>
    <string name="genre_2_example">Adventure</string>
    <string name="genre_3_example">Comedy</string>

    <string name="alert_1">Not yet implemented</string>
    <string name="error_connection">Internet connection failure</string>
    <string name="error_404">Oops, a page you\'re looking for was not found! :(</string>
    <string name="error_500">Internal Server Error</string>
    <string name="error_501">Service not implemented</string>
    <string name="error_503">Service Unavailable</string>
    <string name="error_504">Gateway Time-Out</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_tab_one">Info</string>
    <string name="title_tab_two">Casting</string>
    <string name="title_tab_three">Seasons</string>
    <string name="title_tab_four">Filmography</string>
    <string name="time_example">139</string>
    <string name="minutes_example">minutes</string>
    <string name="production">Production:</string>
    <string name="production_example">Marvel Studios</string>
    <string name="overview">Overview:</string>
    <string name="similar_movies">Similar movies:</string>
    <string name="large_text">Join us in congratulating the latest apps and games entering the Android Excellence program on Google Play. This diverse group of apps and games is recognized for their high quality, great user experience, and strong technical performance. Whether you\'re interested in learning meditation or a new language, or are looking for a game about butterflies or warships, we\'re excited to dive in to these new collections.</string>
    <string name="header_movie">Movies</string>
    <string name="header_tv_shows">TV Shows</string>
    <string name="header_others">Others</string>
    <string name="settings">Settings</string>
    <string name="about_us">About</string>
    <string name="action_search">Search</string>
    <string name="general_settings">General</string>
    <string name="language_settings">Language</string>

    <string name="about_text_1">Information on movies and TV shows is available at PopCorn, such as the year of release, movie time, general movie summary, related movies, cast, etc. The films and tv shows are divided into three categories: \"Popular\", \"Top rated\" and \"Now playing/Today\'s Show\".</string>
    <string name="about_text_2">The entire database used in this documentation is provided by The Movie Database API (TMDb). For more information: \n<a href="https://www.themoviedb.org/documentation/api">https://www.themoviedb.org/documentation/api</a></string>
    <string name="about_text_3">Developed by Valmir Torres de Jesus Junior</string>
    <string name="about_text_4">This project is available on github: \n<a href = "https://github.com/valmirt/kotlin-mvp-dagger2">https://github.com/valmirt/kotlin-mvp-dagger2</a></string>
    <string name="about_text_5">To contact, please send an email to valmirt.dev@gmail.com</string>
    <string name="remind_me">Later</string>
    <string name="no_thanks">No, thanks</string>
    <string name="rate_it">Rate</string>
    <string name="rate_it_now">Rate now</string>
    <string name="text_rate_1">If you enjoy using</string>
    <string name="text_rate_2">, please take a moment to rate it. Thanks for your support!</string>

    <string name="welcome_title">Welcome to PopCorn</string>
    <string name="welcome_description">Thanks for downloading the PopCorn app. This application aims to provide information about movies and TV shows, such as the year of release, movie time, general summary about the film, related films, cast, etc.\n\nThere is no option to watch any movie or TV shows in this application.\n\nAny available means of consuming movies and TV shows without the proper acquisition is piracy and piracy is a crime.\n\nEnjoy PopCorn and, once again, thank you very much for the download.</string>
    <string name="trailers">Trailers</string>
    <string name="share">Share</string>
    <string name="error_trailer">There are no trailers</string>
    <string name="share_message">Look this:</string>
    <string name="birthday_person">Birthday:</string>
    <string name="death_day_person">Death day:</string>
    <string name="place_of_birth_person">Place of birth:</string>
    <string name="biography_person">Biography:</string>
</resources>
