<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_popular"
            android:title="@string/popular" />
        <item
            android:id="@+id/nav_top_rated"
            android:icon="@drawable/ic_top_rated"
            android:title="@string/top_rated" />
        <item
            android:id="@+id/nav_now_playing"
            android:icon="@drawable/ic_now_playing"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/nav_up_coming"
            android:icon="@drawable/ic_upcoming"
            android:title="@string/up_coming" />
    </group>
</menu>
